--- a/portfolio.html
+++ b/portfolio.html
@@ -18,30 +18,32 @@
 </head>
 
 <body>
-    <header>
+     <header class="header">
+      <div class="container main-nav">
         <nav>
-            <a href="./index.html" class="logo-main">Web<span class="logo-black">Studio</span></a>
-            <ul class="list">
-                <li>
-                    <a href="./index.html" class="menu-link ">Студія</a>
-                </li>
-                <li>
-                    <a href="./portfolio.html" class="menu-link active-link">Портфоліо</a>
-                </li>
-                <li>
-                    <a href="#" class="menu-link">Контакти</a>
-                </li>
-            </ul>
+          <a href="./index.html" class="logo-main">Web<span class="logo-black">Studio</span></a>
+          <ul class="list site-nav">
+            <li class="item">
+              <a href="./index.html" class="menu-link">Студія</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="menu-link active-link">Портфоліо</a>
+            </li>
+            <li class="item">
+              <a href="#" class="menu-link">Контакти</a>
+            </li>
+          </ul>
         </nav>
 
-        <ul class="list">
-            <li>
-                <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
-            </li>
+        <ul class="list contacts">
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
+          </li>
+          <li class="item">
+            <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+          </li>
         </ul>
+      </div>
     </header>
 
     <main>
@@ -121,23 +123,30 @@
             </ul>
         </section>
     </main>
+
     <footer class="footer">
-          <a href="./index.html" class="logo-main">Web<span class="logo-white">Studio</span></a>
-        <address>
-            <ul class="list">
-                <li>
-                    <a href="https://goo.gl/maps/VaSAjemoiXG7hevM7" target="_blank" rel="noreferrer noopener" class="footer-link address">м. Київ,
-                        пр-т Лесі Українки, 26
-                    </a>
-                </li>
-                <li>
-                    <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a>
-                </li>
-            </ul>
+      <div class="container">
+        <a href="./index.html" class="logo-main">Web<span class="logo-white">Studio</span></a>
+        <address class="address-group">
+          <ul class="list">
+            <li class="address-item">
+              <a
+                href="https://goo.gl/maps/VaSAjemoiXG7hevM7"
+                target="_blank"
+                rel="noreferrer noopener"
+                class="footer-link address"
+                >м. Київ, пр-т Лесі Українки, 26
+              </a>
+            </li>
+            <li class="address-item">
+              <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a>
+            </li>
+            <li class="address-item">
+              <a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a>
+            </li>
+          </ul>
         </address>
+      </div>
     </footer>
 
 </body>
