Вносит правки после проверки ментором

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
         </div>
       </section>
 
+      <!-- Приимущества -->
+
       <section class="section advantages">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
@@ -118,23 +120,31 @@
           <ul class="team-list list">
             <li class="team-item">
               <img src="./images/igor.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
-              <h3 class="name">Ігор Дем'яненко</h3>
-              <p class="job-title" lang="en">Product Designer</p>
+              <div class="team-container">
+                <h3 class="name">Ігор Дем'яненко</h3>
+                <p class="job-title" lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/olga.jpg" alt="Ольга Рєпіна" width="270" height="260" />
-              <h3 class="name">Ольга Рєпіна</h3>
-              <p class="job-title" lang="en">Frontend Developer</p>
+              <div class="team-container">
+                <h3 class="name">Ольга Рєпіна</h3>
+                <p class="job-title" lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/kolya.jpg" alt="Микола Тарасов" width="270" height="260" />
-              <h3 class="name">Микола Тарасов</h3>
-              <p class="job-title" lang="en">Marketing</p>
+              <div class="team-container">
+                <h3 class="name">Микола Тарасов</h3>
+                <p class="job-title" lang="en">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/misha.jpg" alt="Михайло Єрмаков" width="270" height="260" />
-              <h3 class="name">Михайло Єрмаков</h3>
-              <p class="job-title" lang="en">UI Designer</p>
+              <div class="team-container">
+                <h3 class="name">Михайло Єрмаков</h3>
+                <p class="job-title" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
